package base;

public enum VehicleType
{
    POLICE,
    AUTOMOBILE
}
