package exceptions;

public class TrafficException extends Exception
{
    public TrafficException(String message)
    {
        super(message);
    }
}
